tdf#101885: fix crash in AccFrameSelector

Deal with no parent case
0x00007ffff5e98240 in vcl::Window::GetChildCount() const ()
0  0x00007ffff5e98240 in vcl::Window::GetChildCount() const ()
1  0x00007ffff54f2d1f in svx::a11y::AccFrameSelector::getAccessibleIndexInParent() ()
See https://bugs.documentfoundation.org/attachment.cgi?id=127141

Change-Id: I795dc4c083d743466b5605d3dcc8f9fca8674c43